--- a/www/post_23_12_2020.html
+++ b/www/post_23_12_2020.html
@@ -37,6 +37,9 @@
             <a class="nav-link" href="index.html">Статті</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link" href="programing.html">Програмування</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" href="about.html">Про проєкт</a>
         </li>
     </ul>
