--- a/www/programing.html
+++ b/www/programing.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
   <title>Про проект</title>
   <meta charset="utf-8">
@@ -19,9 +20,9 @@
 
       gtag('config', 'G-FQGF7F91SM');
   </script>
+
 </head>
 <body>
-
 
 <div class="jumbotron jumbotron-fluid">
    <div class="container">
@@ -37,10 +38,10 @@
             <a class="nav-link" href="index.html">Статті</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="programing.html">Програмування</a>
+            <a class="nav-link active" href="programing.html">Програмування</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" href="about.html">Про проєкт</a>
+            <a class="nav-link" href="about.html">Про проєкт</a>
         </li>
     </ul>
 
@@ -50,36 +51,28 @@
   <div class="row">
     <div class="col-sm-3">
 
-       <div class="card">
-          <img class="card-img-top" src="img/img_avatar1.png" alt="">
-          <!--
-          <div class="card-body">
-            <h4 class="card-title">John Doe</h4>
-            <p class="card-text">Some example text.</p>
-            <a href="#" class="btn btn-primary">See Profile</a>
-          </div>
-          -->
-       </div>
+        <div class="card">
+
+            <img class="card-img-top" src="img/statty.png" alt="">
+          
+        </div>
 
     </div>
     <div class="col-sm-6">
-      <h2>Про проєкт</h2>
-
+      <h2>Статті</h2>
       <hr/>
 
-      <p><b>Find.Org.Ua</b> - це авторський проєкт створений з метою просвітництва.</p>
-      <p>Я нікого не навчаю, я навчаюся сам, я сам знаходжуся в стані пошуку мудрості.</p>
-      <p>Цікаві перли мудрості я буду викладати на сайті, щоб поділитися з усіма бажаючими.</p>
-      <p>Можливо хтось знайде для себе щось цікаве і це допоможе йому у вирішенні життєвих питань.</p>
+      <ul>
+            <li>
+              <a href="/post_23_12_2020.html">Мир між людьми. Які в цьому запоруки. Як вирішувати конфліктні ситуації. Теорія і практика.</a>
+            </li>
 
-      <p>Бажаю всім миру!</p>
+       </ul>
 
     </div>
     <div class="col-sm-3">
 
     </div>
-
-
   </div>
 </div>
 
