--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,9 @@
             <a class="nav-link active" href="index.html">Статті</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link" href="programing.html">Програмування</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" href="about.html">Про проєкт</a>
         </li>
     </ul>
