--- a/www/post_23_12_2020.html
+++ b/www/post_23_12_2020.html
@@ -34,7 +34,7 @@
 
     <ul class="nav nav-pills">
         <li class="nav-item">
-            <a class="nav-link" href="index.html">Статті</a>
+            <a class="nav-link active" href="index.html">Статті</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="programing.html">Програмування</a>
