--- a/www/post_24_12_2020.html
+++ b/www/post_24_12_2020.html
@@ -1,6 +1,5 @@
 ﻿<!DOCTYPE html>
 <html>
-
 <head>
   <title>Про проект</title>
   <meta charset="utf-8">
@@ -51,23 +50,33 @@
   <div class="row">
     <div class="col-sm-3">
 
-        <div class="card">
+       <div class="card">
 
-            <img class="card-img-top" src="img/statty.png" alt="">
+          <img class="card-img-top" src="img/" alt="">
           
-        </div>
+       </div>
+
+       <p>ggg</p>
 
     </div>
     <div class="col-sm-6">
-      <h2>Статті</h2>
-      <hr/>
 
-      <ul>
-            <li>
-              <a href="/post_24_12_2020.html">eeeeeeee</a>
-            </li>
+<h1>kkkk</h1>
 
-       </ul>
+<p>.</p>
+
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
 
     </div>
     <div class="col-sm-3">
