--- a/www/post_24_12_2020.html
+++ b/www/post_24_12_2020.html
@@ -56,14 +56,14 @@
           
        </div>
 
-       <p>ggg</p>
+       <p>Програма для відправки листів | C#</p>
 
     </div>
     <div class="col-sm-6">
 
-<h1>kkkk</h1>
+<h1>Програма для відправки листів | C#</h1>
 
-<p>.</p>
+<p>Програма для відправки листів | C#</p>
 
 <br/>
 <br/>
