--- a/www/post_25_12_2020.html
+++ b/www/post_25_12_2020.html
@@ -1,6 +1,5 @@
 ﻿<!DOCTYPE html>
 <html>
-
 <head>
   <title>Про проект</title>
   <meta charset="utf-8">
@@ -51,25 +50,33 @@
   <div class="row">
     <div class="col-sm-3">
 
-        <div class="card">
+       <div class="card">
 
-            <img class="card-img-top" src="img/statty.png" alt="">
+          <img class="card-img-top" src="img/" alt="">
           
-        </div>
+       </div>
+
+       <p>Інструмент трасформації даних XSLT | C#, XSLT</p>
 
     </div>
     <div class="col-sm-6">
-      <h2>Програмування</h2>
-      <hr/>
 
-      <ul>
-            <li>
-              <a href="/post_24_12_2020.html">Програма для відправки листів | C#</a>
-            </li>
-            <li>
-              <a href="/post_25_12_2020.html">Інструмент трасформації даних XSLT | C#, XSLT</a>
-            </li>
-       </ul>
+<h1>Інструмент трасформації даних XSLT | C#, XSLT</h1>
+
+<p>Інструмент трасформації даних XSLT | C#, XSLT</p>
+
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
 
     </div>
     <div class="col-sm-3">
