--- a/www/post_25_12_2020-3.html
+++ b/www/post_25_12_2020-3.html
@@ -1,6 +1,5 @@
 ﻿<!DOCTYPE html>
 <html>
-
 <head>
   <title>Про проект</title>
   <meta charset="utf-8">
@@ -51,28 +50,32 @@
   <div class="row">
     <div class="col-sm-3">
 
-        <div class="card">
+       <div class="card">
+          <img class="card-img-top" src="img/_quran_cover_11.png" alt="">
+       </div>
 
-            <img class="card-img-top" src="img/statty.png" alt="">
-          
-        </div>
-
+       <p>Коран. Переклад смислів українською мовою. Михайло Якубович.</p>
     </div>
     <div class="col-sm-6">
-      <h2>Статті</h2>
-      <hr/>
 
-      <ul>
-            <li>
-              <a href="/post_23_12_2020.html">Мир між людьми. Які в цьому запоруки. Як вирішувати конфліктні ситуації. Теорія і практика.</a>
-            </li>
-            <li>
-              <a href="/post_25_12_2020-3.html">Коран. Переклад смислів українською мовою. Михайло Якубович.</a>
-            </li>
-            <li>
-              <a href="/post_25_12_2020-2.html">Мир між людьми. Алкоголь.</a>
-            </li>
-       </ul>
+<h1>Коран. Переклад смислів українською мовою. Михайло Якубович.</h1>
+
+<p>Хто хоче розширити всі крогозір - рекомендую прочитати Коран. </p>
+
+<p>Книжку можна купити або читати онлайн на сайті <a href="https://umma.in.ua/ua/node/1750">Духовне управління мусульман України “Умма”</a></p>
+
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
 
     </div>
     <div class="col-sm-3">
