--- a/www/index.html
+++ b/www/index.html
@@ -72,6 +72,15 @@
             <li>
               <a href="/post_25_12_2020-2.html">Мир між людьми. Алкоголь.</a>
             </li>
+            <li>
+              <a href="/post_26_12_2020-2.html">Мир між людьми. Азартні ігри.</a>
+            </li>
+            <li>
+              <a href="/post_29_12_2020.html">Лихварство.</a>
+            </li>
+            <li>
+              <a href="/post_27_12_2020.html">Монахи та ченці.</a>
+            </li>
        </ul>
 
     </div>
