--- a/www/post_26_12_2020-2.html
+++ b/www/post_26_12_2020-2.html
@@ -51,44 +51,14 @@
     <div class="col-sm-3">
 
        <div class="card">
-
-          <img class="card-img-top" src="img/alkohol.jpg" alt="">
-          
+          <img class="card-img-top" src="img/casino.jpg" alt="">
        </div>
 
-       <p>Алкоголь</p>
-
+       <p></p>
     </div>
     <div class="col-sm-6">
 
-<h1>Мир між людьми. Алкоголь.</h1>
-
-<p>Спробую розібрати на атоми як алкоголь порушує мир між людьми.</p>
-
-<p>
-Відомо що в алкогольному спянніні вчиняється багато злочинів, убивст, згвалтувань, також багато дорожньо-транспортних пригод з трагічними наслідками.<br/>
-
-</p>
-
-<p>
-Якщо запитати пересічну людину про алкоголь, то можна почути різні думки. Наприклад: без алкоголю необходиться ніяке застілля або яке весілля без алкоголю і т.д. 
-Кажуть що трохи випити корисно для здоровя. Також кажуть що можна випити сто грам до їди.
-Люди також усвідомлюють руйнівну силу алкоголю. Особливо коли руйнються їхні сімї та здоровя через алкоголь.
-</p>
-
-<p>
-Ще я замітив такий парадокс - якщо ти не вживаєш алкоголь над тобою можуть насміхатися чи навіть ображати, 
-а якщо ти вживаєш алкоголь і перетворюєшся в алкоголіка тоді також будуть насміхатися і ображати.
-Тобто колектив заохочує до вживання алкоголю і якщо людина не має сформованого світогляду і чіткої позиції, може піддатися і почати вживати.
-</p>
-
-<p>
-Дуже важко встояти молодій людині.
-</p>
-
-<p>
-Щоб зрозуміти суть алкоголю, треба звернутись до Святих Писань.
-</p>
+<h1>Мир між людьми. Азартні ігри.</h1>
 
 <h4>Цитати з Корану</h4>
 
@@ -111,16 +81,6 @@
 
 <div class="card bg-light text-dark">
     <div class="card-body">
-       О ви, які увірували! Не наближайтесь до молитви у стані сп’яніння, поки ви не станете усвідомлювати те, що говорите
-       <hr/>
-       Сура 4: Ан-Ніса (Жінки), 43 аят
-    </div>
-</div>
-
-<br/>
-
-<div class="card bg-light text-dark">
-    <div class="card-body">
        О ви, які увірували! Воістину, вино, азартні ігри, камені жертовників і стріли для ворожби — мерзота від шайтана! Тож стережіться цього! Можливо, будете спасенні! <br/><br/>
        Воістину, шайтан бажає посіяти між вами ворожнечу й ненависть через вино й мейсір і відвернути вас від згадування Аллага й молитви. Невже ви не зупинитесь?
        <hr/>
@@ -129,16 +89,6 @@
 </div>
 
 <br/>
-
-<p>
-В Корані все чітко викладено, нічого добавити.
-</p>
-
-<br/>
-<br/>
-
-
-
 <br/>
 <br/>
 <br/>
