--- a/www/post_29_12_2020.html
+++ b/www/post_29_12_2020.html
@@ -51,21 +51,18 @@
     <div class="col-sm-3">
 
        <div class="card">
-          <img class="card-img-top" src="img/_quran_cover_11.png" alt="">
+          <img class="card-img-top" src="img/" alt="">
        </div>
 
-       <p>Коран. Переклад смислів українською мовою. Михайло Якубович.</p>
+       <p></p>
     </div>
     <div class="col-sm-6">
 
-<h1>Коран. Переклад смислів українською мовою. Михайло Якубович.</h1>
+<h1>Лихварство.</h1>
 
-<p>Для тих хто хоче розширити всі крогозір - рекомендую прочитати Коран. </p>
+<p>стаття готується</p>
 
-<p>Книжку можна купити або читати онлайн на сайті <a href="https://umma.in.ua/ua/node/1750">Духовне управління мусульман України “Умма”</a></p>
-
-<p>Також можна читати онлайн на сайті <a href="https://quran.com.ua/meal/yakubovich">Коран онлайн - quran.com.ua</a></p>
-
+<br/>
 <br/>
 <br/>
 <br/>
