--- a/www/index.html
+++ b/www/index.html
@@ -24,28 +24,29 @@
 </head>
 <body>
 
-<div class="jumbotron jumbotron-fluid">
-   <div class="container">
-       <h2>Find.Org.Ua</h2>
-       <p>В пошуках мудрості</p>
-   </div>
+<div class="jumbotron jumbotron-fluid" style="padding-left:20px;margin-bottom:0;">
+    <h1>В пошуках мудрості</h1>
 </div>
 
-<div class="container-fluid" style="margin-bottom:20px;">
-
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="margin-bottom:20px;">
+  <a class="navbar-brand" href="/">find.org.ua</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="nav nav-pills">
-        <li class="nav-item">
-            <a class="nav-link active" href="index.html">Статті</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="programing.html">Програмування</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="about.html">Про проєкт</a>
-        </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="index.html">Статті</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="programing.html">Програмування</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="about.html">Про проєкт</a>
+      </li>    
     </ul>
-
-</div>
+  </div>  
+</nav>
 
 <div class="container-fluid">
   <div class="row">
@@ -88,6 +89,10 @@
 
     </div>
   </div>
+</div>
+
+<div class="jumbotron text-center" style="margin-bottom:0;margin-top:20px;">
+  <p>2020</p>
 </div>
 
 </body>
