--- a/constructor/www/post_29_12_2020.html
+++ b/constructor/www/post_29_12_2020.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <META http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Головна</title>
+    <title>Лихварство.</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css"><script src="bootstrap/jquery.min.js"></script><script src="bootstrap/popper.min.js"></script><script src="bootstrap/bootstrap.min.js"></script><script data-ad-client="ca-pub-8744330757055064" async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><script async="" src="https://www.googletagmanager.com/gtag/js?id=G-FQGF7F91SM"></script><script>
@@ -21,30 +21,20 @@
           <li class="nav-item"><a href="about.html" class="nav-link ">Про проєкт</a></li>
         </ul>
       </div></nav><div class="container-fluid">
-      <div class="row"><div class="col-sm-9">
-    <h2>Статті</h2>
-    <hr/>
+      <div class="row">
+    <div class="col-sm-3">
 
-    <ul>
-        <li>
-            <a href="/post_23_12_2020.html">Мир між людьми. Які в цьому запоруки. Як вирішувати конфліктні ситуації. Теорія і практика.</a>
-        </li>
-        <li>
-            <a href="/post_25_12_2020-2.html">Мир між людьми. Алкоголь.</a>
-        </li>
-        <li>
-            <a href="/post_26_12_2020-2.html">Мир між людьми. Азартні ігри.</a>
-        </li>
-        <li>
-            <a href="/post_27_12_2020.html">Монахи та ченці.</a>
-        </li>
-        <li>
-            <a href="/post_29_12_2020.html">Лихварство.</a>
-        </li>
-        <li>
-            <a href="/post_25_12_2020-3.html">Коран. Переклад смислів українською мовою. Михайло Якубович.</a>
-        </li>
-    </ul>
+       <div class="card">
+          <img class="card-img-top" src="img/" alt="">
+       </div>
+
+       <p></p>
+    </div>
+    <div class="col-sm-6">
+
+<h1>Лихварство.</h1>
+
+<p>стаття готується</p>
 
 <br/>
 <br/>
@@ -59,15 +49,11 @@
 <br/>
 <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
 
-</div>
-<div class="col-sm-3">
+    </div>
+    <div class="col-sm-3">
 
-</div></div>
+    </div></div>
     </div>
     <div class="jumbotron text-center" style="margin-bottom:0;margin-top:20px;">
       <p>2020</p>
