--- a/constructor/html/post_29_12_2020.html
+++ b/constructor/html/post_29_12_2020.html
@@ -28,4 +28,15 @@
     </div>
     <div class="col-sm-3">
 
+        <p>Також</p>
+
+        <ul>
+            <li>
+                <a href="/post_25_12_2020-2.html">Мир між людьми. Алкоголь.</a>
+            </li>
+            <li>
+                <a href="/post_26_12_2020-2.html">Мир між людьми. Азартні ігри.</a>
+            </li>
+        </ul>
+
     </div>
