--- a/constructor/html/programing.html
+++ b/constructor/html/programing.html
@@ -15,10 +15,37 @@
             <a href="/post_24_12_2020.html">Програма для відправки листів | C#</a>
         </li>
         <li>
+            <a href="/post_31_12_2020.html">Валідація Email | C#</a>
+        </li>
+        <li>
             <a href="/post_25_12_2020.html">Інструмент трасформації даних XSLT | C#, XSLT</a>
         </li>
         <li>
             <a href="/post_26_12_2020.html">Перевірка наявності бази даних PostgreSQL | C#, PostgreSQL</a>
+        </li>
+        <li>
+            <a href="/post_31_12_2020-2.html">Підключення до PostgreSQL з C#</a>
+        </li>
+        <li>
+            <a href="/post_31_12_2020-3.html">PostgreSQL 10 | Numeric Types</a>
+        </li>
+        <li>
+            <a href="/post_31_12_2020-4.html">PostgreSQL | Перетворення типів стовпців: text в text[], integer в integer[]</a>
+        </li>
+        <li>
+            <a href="/post_31_12_2020-5.html">Erlang | Web Server</a>
+        </li>
+        <li>
+            <a href="/post_31_12_2020-6.html">Erlang | Shell commands</a>
+        </li>
+        <li>
+            <a href="/post_31_12_2020-7.html">Erlang | Scripts</a>
+        </li>
+        <li>
+            <a href="/post_31_12_2020-8.html">Http web server | C#</a>
+        </li>
+        <li>
+            <a href="/post_31_12_2020-9.html">Обмін з програмою через файлову систему | 1C 7.7</a>
         </li>
     </ul>
 
