--- a/constructor/html/post_26_12_2020.html
+++ b/constructor/html/post_26_12_2020.html
@@ -1,9 +1,8 @@
 ﻿
     <div class="col-sm-3">
        <div class="card">
-          <img class="card-img-top" src="img/" alt="">
+          <img class="card-img-top" src="img/postgresql.jpg" alt="">
        </div>
-       <p></p>
     </div>
     <div class="col-sm-6">
 
