--- a/constructor/www/post_25_12_2020-2.html
+++ b/constructor/www/post_25_12_2020-2.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css"><script src="bootstrap/jquery.min.js"></script><script src="bootstrap/popper.min.js"></script><script src="bootstrap/bootstrap.min.js"></script><script data-ad-client="ca-pub-8744330757055064" async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><script async="" src="https://www.googletagmanager.com/gtag/js?id=G-FQGF7F91SM"></script><script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-			gtag('config', 'G-FQGF7F91SM');
-		</script></head>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-FQGF7F91SM');
+    </script></head>
   <body>
     <div class="jumbotron jumbotron-fluid" style="padding-left:20px;margin-bottom:0;">
       <h1>В пошуках мудрості</h1>
@@ -125,11 +125,22 @@
     </div>
     <div class="col-sm-3">
 
+        <p>Також</p>
+
+        <ul>
+            <li>
+                <a href="/post_26_12_2020-2.html">Мир між людьми. Азартні ігри.</a>
+            </li>
+            <li>
+                <a href="/post_29_12_2020.html">Лихварство.</a>
+            </li>
+        </ul>
+
     </div>
 </div>
     </div>
     <div class="jumbotron text-center" style="margin-bottom:0;margin-top:20px;">
-      <p>2020</p>
+      <p>2021</p>
     </div>
   </body>
 </html>
