--- a/constructor/www/post_31_12_2020-9.html
+++ b/constructor/www/post_31_12_2020-9.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <META http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Перевірка наявності бази даних PostgreSQL</title>
+    <title>Обмін з програмою через файлову систему | 1C 7.7</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css"><script src="bootstrap/jquery.min.js"></script><script src="bootstrap/popper.min.js"></script><script src="bootstrap/bootstrap.min.js"></script><script data-ad-client="ca-pub-8744330757055064" async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><script async="" src="https://www.googletagmanager.com/gtag/js?id=G-FQGF7F91SM"></script><script>
@@ -24,80 +24,36 @@
       <div class="row">
     <div class="col-sm-3">
        <div class="card">
-          <img class="card-img-top" src="img/postgresql.jpg" alt="">
+          <img class="card-img-top" src="img/" alt="">
        </div>
     </div>
     <div class="col-sm-6">
 
-<h1>Перевірка наявності бази даних PostgreSQL</h1>
+<h1>Обмін з програмою через файлову систему | 1C 7.7</h1>
 
-<br/>
-<p>SQL</p>
+<p>Проект на GitHub 
+<a href="https://github.com/tarachom/1C_Data_Exchange" target="_blank">https://github.com/tarachom/1C_Data_Exchange</a></p>
 
-<div class="card bg-light text-dark">
-    <div class="card-body">
-
-<pre>
-SELECT EXISTS(
-   SELECT datname FROM pg_catalog.pg_database WHERE lower(datname) = lower('dbname')
-);
-</pre>
-
-    </div>
-</div>
-
-<br/>
-<p>C#</p>
-
-<div class="card bg-light text-dark">
-    <div class="card-body">
-
-<pre>
-using System;
-using Npgsql;
-
-namespace ConsoleApp1
-{
-    class Program
-    {
-        static void Main(string[] args)
-        {
-            NpgsqlConnection Connection = new NpgsqlConnection("Host=localhost;Username=postgres;Password=1;Port=5433;");
-            Connection.Open();
-
-            string sql = "SELECT EXISTS(SELECT datname FROM pg_catalog.pg_database WHERE lower(datname) = lower('Conf'));";
-
-            NpgsqlCommand nCommand = new NpgsqlCommand(sqlTest, Connection);
-
-            Console.WriteLine(nCommand.ExecuteScalar());
-
-            Console.ReadLine();
-        }
-    }
-}
-
-</pre>
-
-    </div>
-</div>
-
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
+<p>Для прикладу є у нас програма 1С 7.7 з конфігурацією “Торгівля+Склад 
+для України”. Потрібно зробити обмін між програмою 1С та нашою програмою
+ написаною на C# в реальному часі. Зробити обмін короткими 
+повідомленнями, без вигрузки бази даних. <br>В 1С працює багато 
+користувачів, вносять інформацію, наша програма повинна отримувати дуже 
+швидко актуальні дані та мати можливість додавати інформацію.<br>
+Обмін повідомленнями через файлову систему це один із багатьох можливих способів зробити так взаємодію.
+Можна ще через COM.<br><br>Як це працює?<br>Програма
+ 1С моніторить певну папку на наявність файлів з розщиренням *.xml. Якщо
+ знаходить файл, тоді зчитує його, обробляє і записує відповідь у іншу 
+папку. А вже звідти наша програма на C# зчитує результат та обробляє. <br><br>
+Такий спосіб не навантажує процесор, тому що 1С 7.7 має методи фонової обробки даних.</p>
 
     </div>
     <div class="col-sm-3">
-
-    </div></div>
+          
+    </div>
+  </div>
+</div>
+</div>
     </div>
     <div class="jumbotron text-center" style="margin-bottom:0;margin-top:20px;">
       <p>2021</p>
