--- a/constructor/www/post_31_12_2020.html
+++ b/constructor/www/post_31_12_2020.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <META http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Лихварство.</title>
+    <title>Валідація Email | C#</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css"><script src="bootstrap/jquery.min.js"></script><script src="bootstrap/popper.min.js"></script><script src="bootstrap/bootstrap.min.js"></script><script data-ad-client="ca-pub-8744330757055064" async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><script async="" src="https://www.googletagmanager.com/gtag/js?id=G-FQGF7F91SM"></script><script>
@@ -16,25 +16,40 @@
       <h1>В пошуках мудрості</h1>
     </div><nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="margin-bottom:20px;"><a class="navbar-brand" href="/">find.org.ua</a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="nav nav-pills">
-          <li class="nav-item"><a href="index.html" class="nav-link active">Статті</a></li>
-          <li class="nav-item"><a href="programing.html" class="nav-link ">Програмування</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link ">Статті</a></li>
+          <li class="nav-item"><a href="programing.html" class="nav-link active">Програмування</a></li>
           <li class="nav-item"><a href="about.html" class="nav-link ">Про проєкт</a></li>
         </ul>
       </div></nav><div class="container-fluid">
       <div class="row">
     <div class="col-sm-3">
        <div class="card">
-          <img class="card-img-top" src="img/" alt="">
+          <img class="card-img-top" src="img/mail.png" alt="">
        </div>
-       <p></p>
     </div>
     <div class="col-sm-6">
 
-<h1>Лихварство.</h1>
+<h1>Валідація Email | C#</h1>
 
-<p>стаття готується</p>
+<p>Перевірка Email на коректнiсть за допомогою Regex</p>
 
 <br/>
+<p>C#</p>
+
+<div class="card bg-light text-dark">
+    <div class="card-body">
+
+<pre>
+/// Перевiрка Email на коректнiсть
+static bool IsValidEmail(string strIn)
+{
+    return Regex.IsMatch(strIn, @"^([\w-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([\w-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$");
+}
+</pre>
+
+    </div>
+</div>
+
 <br/>
 <br/>
 <br/>
@@ -55,14 +70,14 @@
 
         <ul>
             <li>
-                <a href="/post_25_12_2020-2.html">Мир між людьми. Алкоголь.</a>
-            </li>
-            <li>
-                <a href="/post_26_12_2020-2.html">Мир між людьми. Азартні ігри.</a>
+                <a href="/post_24_12_2020.html">Програма для відправки листів | C#</a>
             </li>
         </ul>
 
-    </div></div>
+    </div>
+  </div>
+</div>
+</div>
     </div>
     <div class="jumbotron text-center" style="margin-bottom:0;margin-top:20px;">
       <p>2021</p>
