--- a/constructor/www/programing.html
+++ b/constructor/www/programing.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css"><script src="bootstrap/jquery.min.js"></script><script src="bootstrap/popper.min.js"></script><script src="bootstrap/bootstrap.min.js"></script><script data-ad-client="ca-pub-8744330757055064" async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><script async="" src="https://www.googletagmanager.com/gtag/js?id=G-FQGF7F91SM"></script><script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-			gtag('config', 'G-FQGF7F91SM');
-		</script></head>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-FQGF7F91SM');
+    </script></head>
   <body>
     <div class="jumbotron jumbotron-fluid" style="padding-left:20px;margin-bottom:0;">
       <h1>В пошуках мудрості</h1>
@@ -38,10 +38,37 @@
             <a href="/post_24_12_2020.html">Програма для відправки листів | C#</a>
         </li>
         <li>
+            <a href="/post_31_12_2020.html">Валідація Email | C#</a>
+        </li>
+        <li>
             <a href="/post_25_12_2020.html">Інструмент трасформації даних XSLT | C#, XSLT</a>
         </li>
         <li>
             <a href="/post_26_12_2020.html">Перевірка наявності бази даних PostgreSQL | C#, PostgreSQL</a>
+        </li>
+        <li>
+            <a href="/post_31_12_2020-2.html">Підключення до PostgreSQL з C#</a>
+        </li>
+        <li>
+            <a href="/post_31_12_2020-3.html">PostgreSQL 10 | Numeric Types</a>
+        </li>
+        <li>
+            <a href="/post_31_12_2020-4.html">PostgreSQL | Перетворення типів стовпців: text в text[], integer в integer[]</a>
+        </li>
+        <li>
+            <a href="/post_31_12_2020-5.html">Erlang | Web Server</a>
+        </li>
+        <li>
+            <a href="/post_31_12_2020-6.html">Erlang | Shell commands</a>
+        </li>
+        <li>
+            <a href="/post_31_12_2020-7.html">Erlang | Scripts</a>
+        </li>
+        <li>
+            <a href="/post_31_12_2020-8.html">Http web server | C#</a>
+        </li>
+        <li>
+            <a href="/post_31_12_2020-9.html">Обмін з програмою через файлову систему | 1C 7.7</a>
         </li>
     </ul>
 
@@ -76,7 +103,7 @@
 </div>
     </div>
     <div class="jumbotron text-center" style="margin-bottom:0;margin-top:20px;">
-      <p>2020</p>
+      <p>2021</p>
     </div>
   </body>
 </html>
