--- a/constructor/html/index.html
+++ b/constructor/html/index.html
@@ -4,6 +4,9 @@
 
     <ul>
         <li>
+            <a href="/post_03_01_2021.html">Яма Нияма (йога).</a>
+        </li>
+        <li>
             <a href="/post_23_12_2020.html">Мир між людьми. Які в цьому запоруки. Як вирішувати конфліктні ситуації. Теорія і практика.</a>
         </li>
         <li>
